--- a/core/templates/authenticated/reportcard/subjectroom.html
+++ b/core/templates/authenticated/reportcard/subjectroom.html
@@ -1,3 +1,4 @@
+<h4 class='reportcard_header header header4'> Individual Performance </h4>
 <table class="reportcard" id="subjectroom_reportcard">
     <thead>
     <tr>
@@ -14,8 +15,8 @@
         </tr>
     {% endfor %}
     <tr>
-        <td>Overall</td>
-        <td>{{ reportcard.subjectroom_average }}</td>
+        <td class='class_average'>Class Average</td>
+        <td class='class_average'>{{ reportcard.subjectroom_average }}<span class="datatables_is_troll invisible">00</span></td> <!-- span put to make sure datatables can sort this -->
     </tr>
     </tbody>
 </table>
