--- a/core/templates/authenticated/widgets/printable_performance.html
+++ b/core/templates/authenticated/widgets/printable_performance.html
@@ -1,4 +1,4 @@
-<div id="printable_report">
+<div class="printable_report">
     <h4 class="header perf header4">{{ name }}&#39;s Performance</h4>
         <p> 
     Statistics is the study of the collection, analysis, interpretation, presentation, and organization of data.
