--- a/core/templates/authenticated/announcement.html
+++ b/core/templates/authenticated/announcement.html
@@ -6,7 +6,7 @@
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
-    <h5 class="well col-md-10 topheader header5">Set Annoucement</h5><br></br>
+    <h5 class="well col-md-10 topheader header5">Set Annoucement</h5>
     <div id="annoucement_form" class='row'>
         {% include 'authenticated/widgets/simple_form.html' with form=vm.authenticated_body.form csrf_token=csrf_token only %}
     </div>
