--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -8,25 +8,20 @@
 {% block announcements %}{% endblock announcements %}
 
 {% block home_body %}
+ <div class='col-md-10'>
     <h4 class="header header4">List of Children</h4>
-<div id="accordion">
     {% for child_home_body in vm.authenticated_body.child_home_bodies %}
         <h3> {{ child_home_body.name }} - {{ child_home_body.classroom }} </h3>
-        <div>
+        
+             <!-- Announcement Div-->
             {% include "authenticated/widgets/announcements_table.html" with announcements=child_home_body.announcements only %}
-
-                <!-- Performance Div -->
+            <!-- Assignment Div -->
             {% include "authenticated/widgets/student_performance.html" with name=child_home_body.name only %}
             {% include "authenticated/widgets/printable_performance.html" with name=child_home_body.name only %}
-                <!-- Assignment Div -->
-
-            <div class="row">
-                {% include "authenticated/assignments_table/active_parent.html" with assignments=child_home_body.active_assignments table_id_suffix=child_home_body.username child_id=child_home_body.child_id only %}
-                {% include "authenticated/assignments_table/corrected_parent.html" with assignments=child_home_body.corrected_assignments child_id=child_home_body.child_id only %}
-            </div>
+            {% include "authenticated/widgets/section_chart_popup.html" only %}
         </div>
-    {% endfor %}    
-</div>
+    {% endfor %}
+</div>    
 {% endblock home_body %}
 
 {% block home_js %}
