--- a/core/templates/authenticated/reportcard/classroom.html
+++ b/core/templates/authenticated/reportcard/classroom.html
@@ -1,3 +1,4 @@
+<h4 class='reportcard_header header header4'> Individual Performance </h4>
 <table class="reportcard" id="classroom_reportcard">
     <thead>
     <tr>
@@ -26,11 +27,11 @@
         </tr>
     {% endfor %}
     <tr>
-        <td>Overall</td>
+        <td class='class_average'>Class Average</td>
         {% for average in reportcard.classroom_averages_by_subject %}
-            <td>{{ average }}</td>
+            <td class='class_average'>{{ average }}</td>
         {% endfor %}
-        <td>{{ reportcard.classroom_average }}</td>
+        <td>{{ reportcard.classroom_average }} <span class="datatables_is_troll invisible"> 00 </span></td> <!-- span put to make sure datatables can sort -->
     </tr>
     </tbody>
 </table>
