--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -14,7 +14,7 @@
     <img class='loginimage' src="{% static 'img/login.jpg' %}">
     <div class="logintext">
         <div class="logindiv">
-            <!--- Start Code for Log In ---->
+            <!--- Start Code for Log In -->
             <h2>LOG IN</h2>
         </br>
 
@@ -27,7 +27,6 @@
                 <div class='loginbuttons'>
                 <input type="submit" class='btn btn-lg btn-default' value="LOG IN"/> 
                 <input type="hidden" name="next" value="{{ next }}"/>
-                <a href=" {% url 'forgot_password' %}">Forgot your password?</a>
                 </div>
             </form>
 
