--- a/core/templates/authenticated/reportcard/classroom.html
+++ b/core/templates/authenticated/reportcard/classroom.html
@@ -11,7 +11,7 @@
     <tr>
         <th></th>
         {% for subject in reportcard.subjects %}
-            <th>{{ subject.teacher }}<span class="invisible subjectroom_id">{{ subject.id }}</span></th>
+            <th class='subject_teacher'>{{ subject.teacher }}<span class="invisible subjectroom_id">{{ subject.id }}</span></th>
         {% endfor %}
         <th></th>
     </tr>
@@ -26,10 +26,10 @@
             <td>{{ row.aggregate }}<span class="invisible student_id">{{ row.student_id }}</span></td>
         </tr>
     {% endfor %}
-    <tr>
-        <td class='class_average'>Class Average</td>
+    <tr class="class_average">
+        <td>Class Average</td>
         {% for average in reportcard.classroom_averages_by_subject %}
-            <td class='class_average'>{{ average }}</td>
+            <td>{{ average }}</td>
         {% endfor %}
         <td>{{ reportcard.classroom_average }} <span class="datatables_is_troll invisible"> 00 </span></td> <!-- span put to make sure datatables can sort -->
     </tr>
