--- a/core/templates/authenticated/assignments_table/base.html
+++ b/core/templates/authenticated/assignments_table/base.html
@@ -7,7 +7,7 @@
             <!-- Table Header -->
             <thead>
             <tr>
-                <th class="largecol">Assignment</th>
+                <th class="regularcol">Assignment</th>
                 <th>Subject</th>
                 {% block infix_column_header %}{% endblock infix_column_header %}
                 <th class="regularcol">Due At</th>
