--- a/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
+++ b/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
@@ -1,5 +1,5 @@
 <div class='row'>
-    <h6 class="header header6 perf"> Subject Room Performance Breakdown</h6>
+    <h6 id='subjectroom_performance_breakdown_header' class="header header6 perf"></h6>
     <div id='subjectroom_performance_breakdown'>
         <div>
             <ul id='subjectroombar' class="nav nav-tabs">
