--- a/core/templates/authenticated/widgets/classroom_performance.html
+++ b/core/templates/authenticated/widgets/classroom_performance.html
@@ -1,4 +1,4 @@
-<h4 class="header perf header4"> Classroom&#39;s Performance</h4>
+<h4 id='classroom_performance_breakdown_header' class="header perf header4"> </h4>
 <br>
 <div id='classroom_performance_breakdown'>
     <div>
