--- a/core/static/css/authenticated_base.css
+++ b/core/static/css/authenticated_base.css
@@ -12,6 +12,7 @@ body{
     text-transform: none;
     font-weight: 100;
     margin-bottom: 10px;
+    margin-top: 30px;
 }
 .sidebarheader{
     font-family: Georgia, serif;
