--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -12,7 +12,7 @@
                 {% include "authenticated/sidebar/listings.html" with listings=sidebar.listings only %}
             {% endblock sidebar_listings %}
         </ul>
-    <div id="emptyspace"></div>
+    <!--div id="emptyspace"></div-->
     </div>
 </div>
  
