--- a/core/templates/authenticated/subject_id/student.html
+++ b/core/templates/authenticated/subject_id/student.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block subjectroom_body %}
-<div class='col-md-10'>
+<div class='row'>
     {% include "authenticated/widgets/student_subjectroom_performance.html" only %}
 </div>
 {% endblock subjectroom_body %}
