--- a/core/templates/authenticated/submission_id/base.html
+++ b/core/templates/authenticated/submission_id/base.html
@@ -21,7 +21,7 @@
 
 {% block authenticated_body %}
     {% block assignment_header %} 
-        <h5 class="well col-md-10 topheader header5">Assignment - {{ vm.authenticated_body.aql_info.title }}</h5><br></br>
+        <h5 class="well row topheader header5">Assignment - {{ vm.authenticated_body.aql_info.title }}</h5><br></br>
     {% endblock assignment_header %}   
     <div class='row'>
         {% block assignment_info %}
