--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -69,6 +69,8 @@
 
     <div id='main_body'>
         {% block body %}{% endblock body %}
+        <div style="clear:both;">
+        </div>
     </div>
     <!-- Footer -->
 
