--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -1,8 +1,29 @@
-<div class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px;">
+<!--div class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px;">
     <p class='indented_body_right navbar-brand navbar-right'> &copy; HWCentral 2015 </p>
 
     <ul id="footcontact" class="nav navbar-nav footer">
         <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in </a></li>
         <li><a href="tel:+919825047325">Phone: +91 9825047325 </a></li>
     </ul>
-</div>
+</div-->
+
+<nav class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px; width:100vw;">
+
+<div class="container-fluid">
+	<div class="navbar-header">
+    <!-- Brand and toggle get grouped for better mobile display -->
+
+
+
+    <a class='indented_body_right navbar-brand' href="{% url 'index' %}">&copy; HWCentral 2015</a>
+	</div>
+
+	<div class="collapse navbar-collapse">
+    <ul class='navbar-right nav navbar-nav footer'>
+        <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in </a></li>
+        <li><a href="tel:+919825047325">Phone: +91 9825047325 </a></li>
+    </ul>
+    </div><!-- /.navbar-collapse -->
+
+</div> <!--- End Fluid-->
+</nav>
