--- a/core/templates/authenticated/assignments_table/base.html
+++ b/core/templates/authenticated/assignments_table/base.html
@@ -1,4 +1,4 @@
-<div class='col-md-10 col-sm-10 col-xs-10'>
+<div class='row'>
     <h4 class="header header4">{% block table_header %}{% endblock table_header %}</h4>
 
     <div class="scroll">
@@ -35,5 +35,4 @@
             </tbody>
         </table>
     </div>
-
 </div>
