--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -7,7 +7,7 @@
 {% endblock home_css %}
 
 {% block home_body %}
-    <div class='col-md-10'>
+    <div class='row'>
         {% include "authenticated/widgets/assignment_create.html" only %}
         {% include "authenticated/widgets/announcement_create.html" only %}
         {% include "authenticated/charts/subjectroom_performance_breakdown.html" only %}
@@ -17,10 +17,8 @@
 {% endblock home_body %}
 
 {% block assignments %}
-    <div class="row">
         {% include "authenticated/assignments_table/uncorrected.html" with assignments=vm.authenticated_body.uncorrected_assignments only %}
         {% include "authenticated/assignments_table/corrected_teacher.html" with assignments=vm.authenticated_body.corrected_assignments only %}
-    </div>
 {% endblock assignments %}
 
 {% block home_js %}
