--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -6,7 +6,7 @@
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
-    <h5 class="well col-md-10 topheader header5">Reset Password</h5><br></br>
+    <h5 class="well row topheader header5">Reset Password</h5><br></br>
     <div class='row'>
         {% with form=vm.authenticated_body.form %}
             <form class='password_change' action='{% url form.action_url_name %}' method='post'>
