--- a/core/templates/authenticated/widgets/announcement_create.html
+++ b/core/templates/authenticated/widgets/announcement_create.html
@@ -1,3 +1,3 @@
 <a href="{% url 'announcement' %}">
-    <button class="btn">Make an Announcement</button>
+    <button class="btn mkbut">Make an Announcement</button>
 </a>
