--- a/core/templates/authenticated/widgets/announcements_table.html
+++ b/core/templates/authenticated/widgets/announcements_table.html
@@ -1,4 +1,4 @@
-<div class='col-md-10 col-sm-10 col-xs-10'>
+<div class='row'>
     <div>
         <h4 class="header header4">Recent Announcements</h4>
 
