--- a/hwcentral/templates/500.html
+++ b/hwcentral/templates/500.html
@@ -9,8 +9,10 @@
 {% endblock header %}
 
 {% block body %}
+<div class="indented_body_left">
     <h2>Something went wrong :(</h2>
     <p>There&#39;s been an error. It has been reported to the site administrators and should be fixed shortly. Thanks
         for your patience.</p>
     <p>Return to <a href="{% url 'index' %}">Home</a></p>
+</div>
 {% endblock body %}
