--- a/hwcentral/templates/503.html
+++ b/hwcentral/templates/503.html
@@ -3,7 +3,9 @@
 {% block title %}Service Unavailable{% endblock title %}
 
 {% block body %}
-    <h2>HWCentral is currently down for maintenance</h2>
-    <p>We should be back up from 4am to 11pm. Thanks for your patience.</p>
+<div class="indented_body_left">
+    <h2>HWCentral is currently down for scheduled maintenance</h2>
+    <p>Please check back during our regular service hours (4am-11pm). Thanks for your patience.</p>
     <p>Return to <a href="{% url 'index' %}">Home</a></p>
+</div>
 {% endblock body %}
