bugfixes: toast submission success message better toast messages better dropdown labels no login in header on login page

--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -8,6 +8,12 @@
 
 {% endblock css %}
 
+{% block header %}
+    {# 500 page is a special page. even request.user is not available in context as we want to minimize db dependency #}
+    {# hence using barebones header #}
+    {% include 'header_base.html' only %}
+{% endblock header %}
+
 {% block body %}
 
 <div style="position:relative;">
