--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -6,7 +6,7 @@
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
-    <h5 class="well row topheader header5">Reset Password</h5><br></br>
+    <h5 class="well row topheader header5">Reset Password</h5>
     <div class='row'>
         {% with form=vm.authenticated_body.form %}
             <form class='password_change' action='{% url form.action_url_name %}' method='post'>
@@ -23,9 +23,7 @@
                     </div>
                     {% include 'authenticated/widgets/help_text.html' with field=form.old_password only %}
                 </div>
-                <br>
                 {% include "authenticated/widgets/password_change.html" with form=form only %}
-                <br>
                 <input type='submit' value='Submit'/>
             </form>
         {% endwith %}
