--- a/core/templates/authenticated/widgets/classrooms_table.html
+++ b/core/templates/authenticated/widgets/classrooms_table.html
@@ -1,5 +1,5 @@
 <div>
-    <h4 class="header header4">List of {{ classrooms_table.school_name }} Classrooms</h4><br>
+    <h4 class="header header4">List of {{ classrooms_table.school_name }} Classrooms</h4>
 
     <div class="row scroll">
         <table id="classroom_table" class="table table-condensed table-striped table-hover" cellspacing='0'>
