--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -64,9 +64,10 @@ background-color: rgba(0, 0, 0, 0.9); color:#fff; position:absolute; top:40px; r
 
 #hwcentral2 h1{
     font-size:45px;
+    margin-bottom: 10px;
 }
 
-#hwcentral2 p{
+#hwcentral2 li{
     font-size:25px;
 }
 
@@ -139,11 +140,11 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
 }
 
 @media screen and (max-width: 1470px){
-        #hwcentral2{
-            top:0px;
-            right:0px;
-            height:100%;
-        }
+    #hwcentral2{
+        top:0px;
+        right:0px;
+        height:100%;
+    }
 }
 
 @media screen and (max-width: 1350px){
@@ -157,7 +158,7 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
         margin-left:20px;
     }
 
-    #hwcentral2 p{
+    #hwcentral2 li{
         width:92%;
         font-size:24px;
         margin-left:20px;
@@ -190,7 +191,7 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
         font-size:30px;
     }
 
-    #hwcentral2 p{
+    #hwcentral2 li{
         font-size:22px;
     }
 
@@ -202,9 +203,15 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
 
 }
 
+ul{
+    list-style-type: none;
+    padding: 0px;
+    margin-top: 40px;
+}
 
-
-
+#hwcentral2 ul li{
+    margin-top: 20px;
+}
 
 
 @media screen and (max-width: 950px){
@@ -261,7 +268,7 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
         margin-top:5px;
     }
 
-        #landing_mid p{
+    #landing_mid p{
         margin-left:15px;
     }
     #horizontaldiv5{
@@ -271,19 +278,20 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
 }
 
 @media screen and (max-width: 690px){
-        #horizontaldiv1{
+        
+    #horizontaldiv1{
         height:680px;
     }
 
-       #loginbutton{
+    #loginbutton{
     margin-left:0px; 
     }
 
-        #hwcentral2 h1{
+    #hwcentral2 h1{
         font-size:25px;
     }
 
-    #hwcentral2 p{
+    #hwcentral2 li{
         font-size:16px;
     }
 
@@ -311,11 +319,11 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
 
 @media screen and (max-width: 520px){
 
-        #hwcentrallogo{
+    #hwcentrallogo{
     width:100px; height:100px; position:relative; left:0px; bottom:0px; margin-top: -70px;
     }
 
-        #horizontaldiv1{
+    #horizontaldiv1{
         height:500px;
     }
 
@@ -332,3 +340,5 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
     }
 
 }
+
+
