--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -121,27 +121,29 @@
         <a name="info"></a>
         <div id="horizontaldiv2">
             <div id="hwcentral1">
-                We work collaboratively with schools to provide teachers with an intuitive interface to assign home-work to their students online. Our platform automatically corrects the answers and provides schools, teachers and parents with in depth analytics to improve educational outcomes in the classroom. <br><br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                High quality question banks based on Indian curriculum<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Personalised and targeted questions<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Easy to use interface for students<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Automatic correction and statistical review<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Advanced analytics for teachers, parents and schools<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Practice assignments available 24 X 7<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Plagiarism detection<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Class announcements and message interface<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Multiple question types - MCQs, Numericals, Textuals and Conditionals<br>
-                <img class="indextick" src="{% static 'img/index/black_tick.png' %}">
-                Multiple subject support - Maths, Science, Social Science, English<br>
+                We work collaboratively with schools to provide teachers with an intuitive interface to assign home-work to their students online. Our platform automatically corrects the answers and provides schools, teachers and parents with in depth analytics to improve educational outcomes in the classroom. 
+                <ul>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    High quality question banks based on Indian curriculum </li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Personalised and targeted questions</li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Easy to use interface for students</li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Automatic correction and statistical review </li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Advanced analytics for teachers, parents and schools</li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Practice assignments available 24 X 7 </li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Plagiarism detection </li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Class announcements and message interface </li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Multiple question types - MCQs, Numericals, Textuals and Conditionals</li>
+                    <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
+                    Multiple subject support - Maths, Science, Social Science, English </li>
+                </ul>
             </div>    
         </div>
 
@@ -150,29 +152,31 @@
         <img id="div3img" style="width:100%;" src="{% static 'img/index/indexone.jpg' %}">
             <div id="hwcentral2">
                 <h1>WHY IS HOMEWORK CENTRAL THE RIGHT SOLUTION?</h1>
-                <p>Teachers spend over 30% of their time correcting homework from notebooks<br><br>
-                Over 90% of the teachers say that homework correction was repetitive<br><br>
-                Teachers agree that class analytics would help identify student strengths and weaknesses<br><br>
-                Over 80% of students admit to copying homework from notebooks<br><br>
-                84% of parents say they would prefer to receive more regular reports on student progress<br><br>
-                Administrators agree that detailed performance analytics would help evaluate and compare teaching methods</p>
+                <ul>
+                    <li>Teachers spend over 30% of their time correcting homework from notebooks </li>
+                    <li>Over 90% of the teachers say that homework correction was repetitive </li>
+                    <li>Teachers agree that class analytics would help identify student strengths and weaknesses </li>
+                    <li>Over 80% of students admit to copying homework from notebooks </li>
+                    <li>84% of parents say they would prefer to receive more regular reports on student progress</li>
+                    <li>Administrators agree that detailed performance analytics would help evaluate and compare teaching methods </li>
+                </ul>
             </div>   
         </div>
 
         <a name="info"></a>
         <div id="horizontaldiv4">
                 TRY HOMEWORK CENTRAL FOR FREE!
-                    <form style="margin-top:20px;">
-                      <input type="text" placeholder="*name" name="firstname"><br>
-                      <input type="text" placeholder="*school" name="school"><br>
-                      <input type="text" placeholder="*email" name="email"><br>
-                      <input id="submitbut" type="submit" name="SUBMIT" value="SUBMIT">
+                    <form  style="margin-top:20px;">
+                      <div><input type="text" placeholder="*name" name="firstname"></div>
+                      <div><input type="text" placeholder="*school" name="school"></div>
+                      <div> <input type="text" placeholder="*email" name="email">  </div>
+                      <input id="submitbut" type="submit" name="SUBMIT" value="SUBMIT"> 
                     </form> 
         </div>
 
         <a name="info"></a>
         <div id="horizontaldiv5">
-                Email us at <b>contact@hwcentral.in</b> or call us at <b>+91 9922498624</b><br> 
+                Email us at <b>contact@hwcentral.in</b> or call us at <b>+91 9922498624</b>
             <div style="font-size:20px; margin-top:20px;">
                   © 2015. Homework Central. 
             </div>  
