--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -120,7 +120,7 @@
 
         <a name="info"></a>
         <div id="horizontaldiv2">
-            <div id="hwcentral1">
+            <div id="index_section1">
                 We work collaboratively with schools to provide teachers with an intuitive interface to assign home-work to their students online. Our platform automatically corrects the answers and provides schools, teachers and parents with in depth analytics to improve educational outcomes in the classroom. 
                 <ul>
                     <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
@@ -150,7 +150,7 @@
         <a name="team"></a>
         <div id="horizontaldiv3">
         <img id="div3img" style="width:100%;" src="{% static 'img/index/indexone.jpg' %}">
-            <div id="hwcentral2">
+            <div id="index_section2">
                 <h1>WHY IS HOMEWORK CENTRAL THE RIGHT SOLUTION?</h1>
                 <ul>
                     <li>Teachers spend over 30% of their time correcting homework from notebooks </li>
