--- a/core/templates/authenticated/sidebar/parent_childinfo.html
+++ b/core/templates/authenticated/sidebar/parent_childinfo.html
@@ -1,4 +1,4 @@
 <h6 class='sidebarheader header6'> Child Info </h6>
 <div class="userinfo_element">{{ child_info.name }}</div>
 <div class="userinfo_element">{{ child_info.classroom }}</div>
-<div class='invisible userinfo_element child_id'>{{ child_info.user_id }}</div>
+<div class='hidden userinfo_element child_id'>{{ child_info.user_id }}</div>
