--- a/core/templates/authenticated/reportcard/classroom.html
+++ b/core/templates/authenticated/reportcard/classroom.html
@@ -11,7 +11,7 @@
     <tr>
         <th></th>
         {% for subject in reportcard.subjects %}
-            <th class='subject_teacher'>{{ subject.teacher }}<span class="invisible subjectroom_id">{{ subject.id }}</span></th>
+            <th class='subject_teacher'>{{ subject.teacher }}</th>
         {% endfor %}
         <th></th>
     </tr>
@@ -23,7 +23,7 @@
             {% for average in row.averages %}
                 <td>{{ average }}</td>
             {% endfor %}
-            <td>{{ row.aggregate }}<span class="invisible student_id">{{ row.student_id }}</span></td>
+            <td>{{ row.aggregate }}<span class="hidden student_id">{{ row.student_id }}</span></td>
         </tr>
     {% endfor %}
     <tr class="class_average">
@@ -31,7 +31,8 @@
         {% for average in reportcard.classroom_averages_by_subject %}
             <td>{{ average }}</td>
         {% endfor %}
-        <td>{{ reportcard.classroom_average }} <span class="datatables_is_troll invisible"> 00 </span></td> <!-- span put to make sure datatables can sort -->
+        <td>{{ reportcard.classroom_average }} <span class="datatables_workaround hidden"> 00 </span></td>
+        <!-- span put to make sure datatables can sort -->
     </tr>
     </tbody>
 </table>
