--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -26,7 +26,7 @@
     {% endblock sidebar %}
     <div id="auth_body" class="col-md-10 col-sm-10 col-xs-10">
     {% block authenticated_body %}{% endblock authenticated_body %}
-    <div style="clear:both;"></div>
+    <div style="clear:both; padding-bottom:20px;"></div>
     </div>
 {% endblock body %}
 
