--- a/core/templates/authenticated/widgets/announcement_create.html
+++ b/core/templates/authenticated/widgets/announcement_create.html
@@ -1,3 +1,3 @@
-<a href="{% url 'announcement' %}">
+<a class="no-decoration margin-left-neg-10" href="{% url 'announcement' %}">
     <button class="btn mkbut">Make an Announcement</button>
 </a>
