--- a/core/templates/authenticated/subject_id/student.html
+++ b/core/templates/authenticated/subject_id/student.html
@@ -5,6 +5,7 @@
 {% block subjectroom_body %}
 <div class='row'>
     {% include "authenticated/widgets/student_subjectroom_performance.html" only %}
+    {% include "authenticated/widgets/section_chart_popup.html" only %}
 </div>
 {% endblock subjectroom_body %}
 
